# synthone

./: Cargo.toml  README.md
src/: lib.rs  notes.rs  plugin_state.rs
src/dsp/: envelope.rs  filter.rs  mixer.rs  mod.rs  oscillator.rs  voice.rs
src/editor/: .mod.rs.swp  mod.rs
src/editor/interface/: .mod.rs.swp  graphics.rs~
waves/: sample-puppet-0.json  sample-puppet-1.json  sample-puppet-2.json  sample-puppet-3.json  sample-puppet-norm0.json  sample-puppet-norm1.json  sample-puppet-norm2.json  sample-puppet-norm3.json  sawtooth.json  sine.json  sine_rand.json  square.json  test.json
