[package]
name = "SynthOne"
version = "0.0.1"
authors = ["Tobin Fitzthum"]
edition = "2018"
resolver = "2"
license = "Apache-2.0"

publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vst = "^ 0.2"
vst_window = "^ 0.3"
log = "0.4.14"
simplelog = "0.11.2"
raw-window-handle = "^ 0.4"
rustfft = "6.0.1"
realfft = "3.0.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
lazy_static = "1.4.0"
rust-embed = "6.3.0"
